@@ -7,6 +7,8 @@
 
 #define RUN_TESTS 0
 
+#define VERY_DEBUG 0
+
 #define ENABLE_PROFILING 0
 
 // ENABLE_SIMD Requires CPU to support at least SSE1 but I will be very surprised if you find a system today which doesn't
@@ -41,7 +43,7 @@ typedef struct Context_Extra {
 // #include "oogabooga/examples/text_rendering.c"
 
 // An engine dev stress test for rendering
-#include "oogabooga/examples/renderer_stress_test.c"
+ #include "oogabooga/examples/renderer_stress_test.c"
 
 // Randy's example game that he's building out as a tutorial for using the engine
 // #include "entry_randygame.c"
