@@ -947,8 +947,8 @@ void os_update() {
 	}
 
 	if (last_window.scaled_width != window.scaled_width || last_window.scaled_height != window.scaled_height) {
-		window.width = window.scaled_width*dpi_scale_factor;
-		window.height = window.scaled_height*dpi_scale_factor;
+		window.width = window.scaled_width/dpi_scale_factor;
+		window.height = window.scaled_height/dpi_scale_factor;
 	}
 	
 	BOOL ok;
@@ -966,7 +966,7 @@ void os_update() {
 	    assert(ok != 0, "AdjustWindowRectEx failed with error code %lu", GetLastError());
 	
 	    u32 actual_x = update_rect.left;
-	    u32 actual_y = update_rect.top; 
+	    u32 actual_y = screen_height - update_rect.top - window.height;
 	    u32 actual_width = update_rect.right - update_rect.left;
 	    u32 actual_height = update_rect.bottom - update_rect.top;
 	    
